--- a/src/styles/scss/layout/_searchbar.scss
+++ b/src/styles/scss/layout/_searchbar.scss
@@ -17,7 +17,7 @@
 .search-input {
   border: none;
   outline: none;
-  width: 600px;
+  width: 75%;
   font-size: 1.1em;
   margin-left: .5em;
 }
